[gd_scene load_steps=50 format=3 uid="uid://bjweaiegmbxwx"]

[ext_resource type="Script" path="res://scripts/hider.gd" id="1_6by6l"]
[ext_resource type="Texture2D" uid="uid://calcla5tp5o6o" path="res://assets/hider/hider_spritesheet.png" id="2_b3xyb"]
[ext_resource type="Script" path="res://scripts/seeker_ui.gd" id="3_gtptx"]
[ext_resource type="Texture2D" uid="uid://bk7y7b6lje3pa" path="res://assets/seeker/seeker_ui/3-512.png" id="4_ukck7"]
[ext_resource type="Texture2D" uid="uid://b5qq2ydmprarf" path="res://assets/seeker/seeker_ui/x_in_a_rectangle_box_u2327_icon_256x256.png" id="5_xyn8y"]
[ext_resource type="Texture2D" uid="uid://b16hcg51sikjs" path="res://assets/seeker/seeker_ui/x_in_a_rectangle_box_u2327_icon_256x256 (1).png" id="6_6dg0v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rf37b"]
size = Vector2(8, 3)

[sub_resource type="AtlasTexture" id="AtlasTexture_alsab"]
atlas = ExtResource("2_b3xyb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l0fh"]
atlas = ExtResource("2_b3xyb")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gvog"]
atlas = ExtResource("2_b3xyb")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcnem"]
atlas = ExtResource("2_b3xyb")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xo5e"]
atlas = ExtResource("2_b3xyb")
region = Rect2(0, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q76ha"]
atlas = ExtResource("2_b3xyb")
region = Rect2(48, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mg0d"]
atlas = ExtResource("2_b3xyb")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_11yb5"]
atlas = ExtResource("2_b3xyb")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri8k1"]
atlas = ExtResource("2_b3xyb")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wa2cp"]
atlas = ExtResource("2_b3xyb")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh34d"]
atlas = ExtResource("2_b3xyb")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq3pe"]
atlas = ExtResource("2_b3xyb")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eb3bq"]
atlas = ExtResource("2_b3xyb")
region = Rect2(96, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtlf4"]
atlas = ExtResource("2_b3xyb")
region = Rect2(144, 144, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5l2hr"]
atlas = ExtResource("2_b3xyb")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_byahu"]
atlas = ExtResource("2_b3xyb")
region = Rect2(144, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_hoodn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_alsab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l0fh")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gvog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcnem")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xo5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q76ha")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mg0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11yb5")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri8k1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wa2cp")
}],
"loop": true,
"name": &"run_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh34d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq3pe")
}],
"loop": true,
"name": &"run_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eb3bq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtlf4")
}],
"loop": true,
"name": &"run_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5l2hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byahu")
}],
"loop": true,
"name": &"run_up",
"speed": 5.0
}]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qst01"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j3e8v"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_33y6u"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rmcg5"]
animation = &"idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_2cccd"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qst01")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_j3e8v")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("AnimationNodeAnimation_33y6u")
blend_point_2/pos = Vector2(1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_rmcg5")
blend_point_3/pos = Vector2(-1.1, 0)
min_space = Vector2(-1.1, -1)
max_space = Vector2(1.1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bstc4"]
animation = &"run_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ixosv"]
animation = &"run_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_url5s"]
animation = &"run_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wn4wg"]
animation = &"run_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ja4my"]
blend_point_0/node = SubResource("AnimationNodeAnimation_bstc4")
blend_point_0/pos = Vector2(0, -1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ixosv")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_url5s")
blend_point_2/pos = Vector2(1.1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_wn4wg")
blend_point_3/pos = Vector2(-1.1, 0)
min_space = Vector2(-1.1, -1)
max_space = Vector2(1.1, 1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4s7jw"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ucmme"]
advance_mode = 2
advance_condition = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jhps8"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_w6n61"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_2cccd")
states/Idle/position = Vector2(307, 144)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_ja4my")
states/Run/position = Vector2(307, 42)
states/Start/position = Vector2(174, 119)
transitions = ["Run", "Idle", SubResource("AnimationNodeStateMachineTransition_4s7jw"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_ucmme"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_jhps8")]

[sub_resource type="Animation" id="Animation_w1byq"]
resource_name = "idle-down"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hider_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hider_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_60b6h"]
resource_name = "idle_left"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hider_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hider_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_jwhnu"]
resource_name = "idle_side"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hider_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hider_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_1n3cp"]
resource_name = "idle_up"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hider_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hider_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_q3xjy"]
resource_name = "run_down"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hider_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run_down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hider_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_wt3lm"]
resource_name = "run_left"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hider_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run_left"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hider_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_hn8cn"]
resource_name = "run_side"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hider_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run_right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hider_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_58lk6"]
resource_name = "run_up"
length = 0.5
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hider_animsprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run_up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hider_animsprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vads7"]
_data = {
"idle_down": SubResource("Animation_w1byq"),
"idle_left": SubResource("Animation_60b6h"),
"idle_right": SubResource("Animation_jwhnu"),
"idle_up": SubResource("Animation_1n3cp"),
"run_down": SubResource("Animation_q3xjy"),
"run_left": SubResource("Animation_wt3lm"),
"run_right": SubResource("Animation_hn8cn"),
"run_up": SubResource("Animation_58lk6")
}

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4blc5"]
load_path = "res://.godot/imported/3-512over.png-e02efd604b0c7cfa8a8857e3cac6f784.ctex"

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6qihk"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="hider" type="CharacterBody2D" groups=["hider"]]
z_index = 1
motion_mode = 1
script = ExtResource("1_6by6l")

[node name="hider_camera" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
position_smoothing_speed = 10.0

[node name="cloak_cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="hider_collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_rf37b")

[node name="hider_animsprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hoodn")
animation = &"idle_left"

[node name="hider_animtree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_w6n61")
anim_player = NodePath("../hider_animplayer")
parameters/conditions/idle = false
parameters/conditions/run = false
parameters/Idle/blend_position = Vector2(-1.1, -0.0106384)
parameters/Run/blend_position = Vector2(0, 0)

[node name="hider_animplayer" type="AnimationPlayer" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_vads7")
}

[node name="hider_ui" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("3_gtptx")

[node name="ui_cooldowns" type="HBoxContainer" parent="hider_ui"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -125.0
offset_top = -153.0
offset_right = 795.0
offset_bottom = 359.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.3, 0.3)

[node name="ui_dash" type="TextureProgressBar" parent="hider_ui/ui_cooldowns"]
layout_mode = 2
max_value = 1.5
step = 0.0
value = 1.5
fill_mode = 4
texture_under = ExtResource("4_ukck7")
texture_progress = SubResource("CompressedTexture2D_4blc5")

[node name="ui_dash_timer" type="Timer" parent="hider_ui/ui_cooldowns/ui_dash"]
wait_time = 0.1
autostart = true

[node name="ui_tag" type="TextureProgressBar" parent="hider_ui/ui_cooldowns"]
layout_mode = 2
max_value = 3.0
step = 0.0
value = 3.0
fill_mode = 4
texture_under = ExtResource("5_xyn8y")
texture_progress = ExtResource("6_6dg0v")

[node name="ui_tag_timer" type="Timer" parent="hider_ui/ui_cooldowns/ui_tag"]
wait_time = 0.1
autostart = true

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_6qihk")

[connection signal="timeout" from="cloak_cooldown" to="." method="_on_cloak_cooldown_timeout"]
[connection signal="timeout" from="hider_ui/ui_cooldowns/ui_dash/ui_dash_timer" to="hider_ui" method="_on_ui_dash_timer_timeout"]
[connection signal="timeout" from="hider_ui/ui_cooldowns/ui_tag/ui_tag_timer" to="hider_ui" method="_on_ui_tag_timer_timeout"]
